# CasicLib

./: .gitignore  CMakeLists.txt  CasicLib.sln  README.md
CasicLib/: CMakeLists.txt  CasicLib.vcxproj
CasicLib/src/: CasicColors.h  CasicConfig.h  CasicGraphics.cpp  CasicGraphics.h  CasicMath.cpp  CasicMath.h  CasicMatrix.cpp  CasicMatrix.h  CasicMatrixTransform.cpp  CasicMatrixTransform.h  CasicMiniLog.h  CasicQuaternion.cpp  CasicQuaternion.h  CasicScopeProfiler.h  CasicTexture.cpp  CasicTexture.h  CasicUtils.cpp  CasicUtils.h  CasicVector.cpp  CasicVector.h
Note/: astc压缩算法.md  pixelformat.md  pod.md  standard-layout.md  万能引用.md
Test/: CMakeLists.txt  Test.vcxproj
Test/src/: TestMath.cpp  TestMath.h  TestMiniLog.h  TestPOD.h  TestTrivallyDestructible.h  TestUtil.cpp  TestUtil.h  main.cpp
Test/src/TMPLab/: CommonLab.h  OptionalLab.h
build-x64-Debug/include/Casic/: CasicGraphics.h  CasicMath.h  CasicMatrixTransform.h  CasicQuaternion.h  CasicTexture.h
build-x64-Debug/lib/: CasicLib.lib
build-x64-Release/include/Casic/: CasicColors.h  CasicMatrix.h  CasicMiniLog.h  CasicUtils.h  CasicVector.h
build-x64-Release/lib/: CasicLib.lib
